@@ -30,6 +30,6 @@ fid_sub_time	1	5	[ 0 1 ]
 profile_modes	fid_block_time	block
 profile_modes	fid_line_time	line
 profile_modes	fid_sub_time	sub
-sub_subinfo	DB::disable_profile	[ undef 0 0 3 0 0 0 0 ]
+sub_subinfo	DB::disable_profile	[ undef 0 0 2 0 0 0 0 ]
 sub_subinfo	DB::disable_profile	called_by	1	2	[ 1 0 0 0 0 0 0 ]
 sub_subinfo	DB::disable_profile	called_by	1	6	[ 1 0 0 0 0 0 0 ]
