@@ -14,20 +14,38 @@ attribute	total_sub_calls	0
 attribute	xs_version	0
 fid_block_time	1	3	[ 0 1 ]
 fid_block_time	1	4	[ 0 1 ]
+fid_block_time	1	5	[ 0 1 ]
+fid_block_time	1	7	0	0
+fid_block_time	1	7	1	2
+fid_block_time	1	7	2	1	[ 0 1 ]
+fid_block_time	1	9	[ 0 1 ]
 fid_fileinfo	1	[ test51-enable.p   1 2 0 0 ]
-fid_fileinfo	1	sub	main::BEGIN	20-20
-fid_fileinfo	1	sub	main::foo	3-3
-fid_fileinfo	1	call	4	main::foo	[ 1 0 0 0 0 0 0 ]
-fid_fileinfo	1	call	6	DB::disable_profile	[ 1 0 0 0 0 0 0 ]
+fid_fileinfo	1	call	9	main::sub1	[ 1 0 0 0 0 0 0 ]
+fid_fileinfo	1	call	11	DB::disable_profile	[ 1 0 0 0 0 0 0 ]
+fid_fileinfo	1	eval	7	[ 2 0 ]
+fid_fileinfo	2	[ (eval 0)[test51-enable.p:7] 1 7 2 2 0 0 ]
+fid_fileinfo	2	sub	main::sub1	1-1
+fid_fileinfo	3	[ (eval 0)[test51-enable.p:7] 1 7 3 4 0 0 ]
+fid_fileinfo	3	sub	main::sub9	1-1
 fid_line_time	1	3	[ 0 1 ]
 fid_line_time	1	4	[ 0 1 ]
+fid_line_time	1	5	[ 0 1 ]
+fid_line_time	1	7	0	0
+fid_line_time	1	7	1	2
+fid_line_time	1	7	2	1	[ 0 1 ]
+fid_line_time	1	9	[ 0 1 ]
 fid_sub_time	1	3	[ 0 1 ]
 fid_sub_time	1	4	[ 0 1 ]
+fid_sub_time	1	5	[ 0 1 ]
+fid_sub_time	1	7	0	0
+fid_sub_time	1	7	1	2
+fid_sub_time	1	7	2	1	[ 0 1 ]
+fid_sub_time	1	9	[ 0 1 ]
 profile_modes	fid_block_time	block
 profile_modes	fid_line_time	line
 profile_modes	fid_sub_time	sub
-sub_subinfo	DB::disable_profile	[ undef 0 0 2 0 0 0 0 ]
-sub_subinfo	DB::disable_profile	called_by	1	6	[ 1 0 0 0 0 0 0 ]
-sub_subinfo	main::BEGIN	[ 1 20 20 0 0 0 0 0 ]
-sub_subinfo	main::foo	[ 1 3 3 1 0 0 0 0 ]
-sub_subinfo	main::foo	called_by	1	4	[ 1 0 0 0 0 0 0 ]
+sub_subinfo	DB::disable_profile	[ undef 0 0 1 0 0 0 0 ]
+sub_subinfo	DB::disable_profile	called_by	1	11	[ 1 0 0 0 0 0 0 ]
+sub_subinfo	main::sub1	[ 2 1 1 1 0 0 0 0 ]
+sub_subinfo	main::sub1	called_by	1	9	[ 1 0 0 0 0 0 0 ]
+sub_subinfo	main::sub9	[ 3 1 1 0 0 0 0 0 ]
